--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fly-retro",
   "version": "1.0.0",
   "description": "",
-  "main": "fly.js",
+  "main": "index.js",
   "scripts": {
     "netlify": "netlify dev"
   },
